backup_individuals/sjeng/use_undefined_identifier/c0/comp_to_san
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/comp_to_san/src/utils.c:597:24: error: use of undeclared identifier 'unk_429610'
memcpy( type_to_char, &unk_429610, sizeof( type_to_char)); 
                       ^
1 error generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/comp_to_san/src/obj/utils.o] Error 1
